[tool.poetry]
name = "calibration"
version = "0.1.0"
description = ""
authors = ["CarstenFrommhold <carsten.frommhold@datadrivers.de>", "Malte Quast <malte.quast@datadrivers.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.3.0"
pandas = "^2.1.0"
numpy = "^1.25.2"
matplotlib = "^3.7.2"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
